# comfaix

./: .clangd  .gitignore  Makefile  README.md  credit.md
core/: CMakeLists.txt
core/cmake/: clipper.cmake  dependencies.cmake  dependencies.prebuilt.cmake  googletest.cmake  json.cmake  onetbb.cmake  opencv.cmake  openvino.cmake
core/modules/: CMakeLists.txt
core/modules/common/: CMakeLists.txt
core/modules/common/include/cpp/common/: ov_types.hpp  ovs_assert.hpp  segmentation.hpp  similarity.hpp  sort.hpp  visibility.hpp
core/modules/ocr/: CMakeLists.txt
core/modules/ocr/include/cpp/ocr/: recognize.hpp
core/modules/ocr/include/cpp/ocr/paddle/: config.hpp  pre_processing.hpp  recognize.hpp
core/modules/ocr/src/cpp/paddle/: config.cpp  pre_processing.cpp  recognize.cpp
core/modules/ocr/src/cpp/test/: CMakeLists.txt
core/modules/ocr/src/cpp/test/paddle/: paddle_recognize_test.cpp
core/modules/pipeline/: CMakeLists.txt
core/modules/pipeline/include/cpp/pipeline/: batch.hpp
core/modules/pipeline/include/cpp/pipeline/image/: normalize_op.hpp  padding_op.hpp  permute_op.hpp  resize_op.hpp  score.hpp  segment_op.hpp  segment_util.hpp
core/modules/pipeline/src/cpp/image/: score.cpp  segment_op.cpp  segment_util.cpp
core/modules/pipeline/src/cpp/test/: CMakeLists.txt
core/modules/pipeline/src/cpp/test/image/: batch_test.cpp  chain_test.cpp  permute_op_test.cpp  resize_op_test.cpp  segment_op_test.cpp
core/modules/segmentation/: CMakeLists.txt
core/modules/segmentation/include/cpp/segmentation/: segment.hpp
core/modules/segmentation/include/cpp/segmentation/image/: query.hpp
core/modules/segmentation/include/cpp/segmentation/image/classic/: detection.hpp  edge.hpp  embed.hpp  query.hpp
core/modules/segmentation/include/cpp/segmentation/image/deeplearning/: sam.hpp  vit.hpp
core/modules/segmentation/include/cpp/segmentation/text/paddle/: config.hpp  detect.hpp
core/modules/segmentation/src/cpp/image/classic/: detection.cpp  edge.cpp  edge_dexined.cpp  edge_teed.cpp  embed.cpp  query.cpp
core/modules/segmentation/src/cpp/image/deeplearning/: dino_v2.cpp  sam.cpp  vit.cpp
core/modules/segmentation/src/cpp/test/: CMakeLists.txt
core/modules/segmentation/src/cpp/test/image/classic/: edge_detection_test.cpp
core/modules/segmentation/src/cpp/test/image/deeplearning/: sam_test.cpp  vit_test.cpp
core/modules/segmentation/src/cpp/test/text/paddle/: detection_test.cpp
core/modules/segmentation/src/cpp/text/paddle/: config.cpp  detect.cpp
core/modules/segmentation/src/text/paddle/: detect.cpp
